[package]
authors = ["nathanjent <nathanjent@gmail.com>"]
name = "cgi-rs"
version = "0.1.0"

[dependencies]
dotenv = "0.8.0"
envy = "0.2.0"
futures = "0.1"
serde = "0.9.11"
serde_derive = "0.9.11"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-stdio = { git = "https://github.com/smith61/tokio-stdio" }
#hyper = "0.10.5"
#hyper-router = "0.2.0"
#hyper_serde = "0.6.2"
#time = "0.1"
#cookie = { version = "0.6", default-features = false }
